// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Persona renders Persona correctly with image 1`] = `
<div
  className=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <div
    className=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
  >
    <div
      className=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
    >
      <div
        className=
            ms-Image
            ms-Persona-image
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-radius: 50%;
              border: 0px;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 48px;
              left: 0px;
              margin-right: 10px;
              overflow: hidden;
              perspective: 1px;
              position: absolute;
              top: 0px;
              width: 48px;
            }
        style={
          Object {
            "height": 48,
            "width": 48,
          }
        }
      >
        <img
          alt=""
          className=
              ms-Image-image
              ms-Image-image--cover
              ms-Image-image--portrait
              is-notLoaded
              is-fadeIn
              {
                display: block;
                height: 100%;
                left: 50% /* @noflip */;
                object-fit: cover;
                opacity: 0;
                position: absolute;
                top: 50%;
                transform: translate(-50%,-50%);
                width: 100%;
              }
          onError={[Function]}
          onLoad={[Function]}
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAC0lEQVQImWP4DwQACfsD/eNV8pwAAAAASUVORK5CYII="
        />
      </div>
    </div>
  </div>
  <div
    className=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 12px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      className=
          ms-Persona-primaryText
          {
            color: #323130;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
          &:hover {
            color: #201f1e;
          }
      dir="auto"
    >
      <div
        className=
            ms-TooltipHost
            {
              display: inline;
            }
        onBlurCapture={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Kat Larrson
      </div>
    </div>
    <div
      className=
          ms-Persona-secondaryText
          {
            color: #605e5c;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    />
    <div
      className=
          ms-Persona-tertiaryText
          {
            color: #605e5c;
            display: none;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    />
    <div
      className=
          ms-Persona-optionalText
          {
            color: #605e5c;
            display: none;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    />
  </div>
</div>
`;

exports[`Persona renders Persona correctly with initials 1`] = `
<div
  className=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <div
    className=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
  >
    <div
      className=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
    >
      <div
        aria-hidden="true"
        className=
            ms-Persona-initials
            {
              background-color: #498205;
              border-radius: 50%;
              color: #ffffff;
              font-size: 16px;
              font-weight: 600;
              height: 48px;
              line-height: 46px;
            }
            @media screen and (-ms-high-contrast: active){& {
              -ms-high-contrast-adjust: none;
              background-color: Window !important;
              border: 1px solid WindowText;
              box-sizing: border-box;
              color: WindowText;
            }
            & i {
              font-weight: 600;
            }
      >
        <span>
          KL
        </span>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 12px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      className=
          ms-Persona-primaryText
          {
            color: #323130;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
          &:hover {
            color: #201f1e;
          }
      dir="auto"
    >
      <div
        className=
            ms-TooltipHost
            {
              display: inline;
            }
        onBlurCapture={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Kat Larrson
      </div>
    </div>
    <div
      className=
          ms-Persona-secondaryText
          {
            color: #605e5c;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    />
    <div
      className=
          ms-Persona-tertiaryText
          {
            color: #605e5c;
            display: none;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    />
    <div
      className=
          ms-Persona-optionalText
          {
            color: #605e5c;
            display: none;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    />
  </div>
</div>
`;

exports[`Persona renders Persona correctly with no props 1`] = `
<div
  className=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
>
  <div
    className=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
  >
    <div
      className=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
    >
      <div
        aria-hidden="true"
        className=
            ms-Persona-initials
            {
              background-color: #0078D4;
              border-radius: 50%;
              color: #ffffff;
              font-size: 16px;
              font-weight: 600;
              height: 48px;
              line-height: 46px;
            }
            @media screen and (-ms-high-contrast: active){& {
              -ms-high-contrast-adjust: none;
              background-color: Window !important;
              border: 1px solid WindowText;
              box-sizing: border-box;
              color: WindowText;
            }
            & i {
              font-weight: 600;
            }
      >
        <i
          aria-hidden={true}
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: inline-block;
                font-family: "FabricMDL2Icons-0";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
          data-icon-name="Contact"
        >
          
        </i>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 12px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      className=
          ms-Persona-primaryText
          {
            color: #323130;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
          &:hover {
            color: #201f1e;
          }
      dir="auto"
    />
    <div
      className=
          ms-Persona-secondaryText
          {
            color: #605e5c;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    />
    <div
      className=
          ms-Persona-tertiaryText
          {
            color: #605e5c;
            display: none;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    />
    <div
      className=
          ms-Persona-optionalText
          {
            color: #605e5c;
            display: none;
            font-size: 14px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      dir="auto"
    />
  </div>
</div>
`;
